TEST_PROGRAMS/VALID/02/longformfunction.go
package main

// Long form, one id with one type
func f(a int, b int, c string, d int) {
    return
}

func main(){
    f(4,5,"hi",6);
}
